my third commit

--- a/styel.css
+++ b/styel.css
@@ -87,3 +87,33 @@ body {
 .fiex-box:hover {
     background-color: skyblue;
 }
+
+.system-manage {
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    justify-content: space-around;
+}
+
+.child-containt {
+    background-color: papayawhip;
+    width: 350px;
+    height: 380px;
+    text-align: center;
+    padding: 20px;
+    border: 5px solid white;
+    border-radius: 30px;
+}
+
+.child-containt:hover {
+    background-color: rgba(219, 205, 233, 0.932);
+}
+
+.child-containt img {
+    background-color: rgba(177, 163, 146, 0.897);
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    padding: 20px;
+    border-radius: 30px;
+}
