--- a/styel.css
+++ b/styel.css
@@ -117,3 +117,22 @@ body {
     padding: 20px;
     border-radius: 30px;
 }
+
+footer {
+    background-color: whitesmoke;
+    width: 100%;
+    height: 200px;
+    margin-top: 20px;
+}
+
+.footer-contain h3 {
+    text-align: center;
+    padding-top: 100px;
+    color: black;
+}
+
+.footer-contain p {
+    text-align: center;
+    padding-top: 100px;
+    color: whitesmoke;
+}
